# jba

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Gemfile  Guardfile  Makefile  README.md  Thorfile  build.rs  cpu.rs  gb.rs  index.html  jba-browser.js  jba.manifest  jba.min.js  main.rs  mem.rs  timer.rs
_release/: release.sh
js/: jba-browser.js  jba.min.js
lib/guard/: sinatra.rb
lib/jba/: generator.rb  jquery-1.4.3.externs.js  utils.rb
lib/js/: utils.rb
lib/z80/: generator.rb
src/: cpu.js  cpu.rs  debug.js  gb.rs  gl.rs  gl_imp.rs  glfw-trigger  gpu.js  gpu.rs  input.js  input.rs  instructions.js  jba-browser.js  jba.js  main.rs  mem.rs  memory.js  pad.js  registers.js  rtc.js  rtc.rs  sgb.js  sgb.rs  stringio.js  test.rs  timer.js  timer.rs  z80.js
src/cpu/: mod.rs
src/cpu/z80/: imp.rs  mod.rs
src/tests/: mod.rs
src/z80/: daa.rs  gen.rs  imp.rs  mod.rs
src/z80/templates/: instructions.tt
test/: generator.rb  gpu_test.js  index.html  instructions-test.js  memory-test.js  memory_test.js  registers-test.js  runtests.html  server.rb  utils.rb
test/mbc/: mbc3_test.js
test/public/: gpu_test.js  memory_test.js  stringio_test.js
test/public/jba/: debug.js  jba-browser.js  jba.manifest
test/public/mbc/: mbc1_test.js  mbc2_test.js  no_mbc_test.js
test/public/test/: gpu_test.js  rtc_test.js
test/public/test/mbc/: mbc2_test.js  mbc3_test.js  no_mbc_test.js
test/public/z80/: instructions_test.js  registers_test.js
test/views/: debug.erb  roms.erb  runtests.erb
test/z80/: instructions_test.js  registers_test.js
tests/: README.txt
(+1 files in other folders)
