[project]

name = "jba"
version = "0.1.0"
authors = []

[profile.dev]
debug-assertions = false

[profile.test]
debug-assertions = false

[dependencies]
time = "0.1"
log = "0.3"
env_logger = "0.3"
getopts = "0.2"
libc = "0.1"
gl = { git = "https://github.com/bjz/gl-rs" }
glfw = { git = "https://github.com/bjz/glfw-rs" }

[dev-dependencies]
flate2 = "0.2"
