[project]

name = "jba"
version = "0.1.0"
authors = []
build = "build.rs"

[profile.dev]
debug-assertions = false
[profile.test]
debug-assertions = false

[dependencies]
time = "0.1"
log = "0.3"
env_logger = "0.3"
getopts = "0.2"
libc = "0.1"
gl = "0.0.12"
glutin = "0.3"
gl_common = "0.0.4"

[dev-dependencies]
flate2 = "0.2"

[build-dependencies]
gl_generator = "0.0.27"
khronos_api = "0.0.7"
