[project]

name = "jba"
version = "0.1.0"
authors = []
build = "build.rs"

[profile.dev]
debug-assertions = false
[profile.test]
debug-assertions = false

[dependencies]
time = "0.1"
log = "0.3"
env_logger = "0.3"
getopts = "0.2"
libc = "0.2"
gl = "0.5.2"
glutin = "0.4"
gl_common = "0.1.0"

[dev-dependencies]
flate2 = "0.2"

[build-dependencies]
gl_generator = "0.4.2"
khronos_api = "1.0.0"
